fix: click icon flickering

--- a/styles/components/page/IconSelector.module.css
+++ b/styles/components/page/IconSelector.module.css
@@ -123,7 +123,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
+  border: 1px solid transparent;
   cursor: pointer;
 }
 
